--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
 packaging==25.0
+requests==2.32.3
 PyJWT==2.10.1
 pymongo==4.15.3
 python-dotenv==1.2.1
